--- a/src/locales/hi/translation.json
+++ b/src/locales/hi/translation.json
@@ -18,5 +18,14 @@
       "p3": "शहर के अधिकारी भी हमारे प्लेटफ़ॉर्म से लाभान्वित होते हैं। उन्हें रिपोर्ट किए गए मुद्दों के बारे में वास्तविक समय की सूचनाएँ मिलती हैं और वे शिकायतों की स्थिति को कुशलतापूर्वक प्रबंधित और अपडेट कर सकते हैं। यह पारदर्शिता जिम्मेदारी को प्रोत्साहित करती है और यह सुनिश्चित करती है कि नागरिक सेवाएँ अधिक प्रभावी ढंग से प्रदान की जाएं।",
       "p4": "My Municipal Mate पर, हमें विश्वास है कि एक स्वस्थ, सुरक्षित, और अधिक प्रतिक्रियाशील शहर कुछ ही क्लिक दूर है। अपने शहर को एक बेहतर स्थान बनाने में हमारे साथ जुड़ें!"
     },
-    "quickLinks": "त्वरित लिंक"
+    "quickLinks": "त्वरित लिंक",
+    "contact": {
+    "heading": "संपर्क करें",
+    "address": "ACTS-CDAC, पंचवटी, पाषाण- पुणे",
+    "email": "ईमेल: mymunicipalmate.com",
+    "phone": "फ़ोन: +123 456 7890"
+  },
+  "footer": {
+    "copyright": "&copy; 2024 My Municipal Mate सभी अधिकार सुरक्षित।"
+  }
   }
