--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -18,5 +18,15 @@
       "p3": "City officials benefit from our platform too. They receive real-time notifications about reported issues and can efficiently manage and update the status of complaints. This transparency fosters accountability and ensures that civic services are delivered more effectively.",
       "p4": "At My Municipal Mate, we believe that a healthier, safer, and more responsive city is just a few clicks away. Join us in making your city a better place to live!"
     },
-    "quickLinks": "Quick Links"
-  }
+    "quickLinks": "Quick Links",
+    "contactUs": {
+      "heading": "Contact Us",
+      "address": "ACTS-CDAC, Panchavati, Pashan- Pune",
+      "email": "Email: mymunicipalmate.com",
+      "phone": "Phone: +123 456 7890",
+      "feedback": "For any site feedback and other reviews, use our social media handles or email us. We would like to hear from you!!!"
+    },
+    "footer": {
+      "copyright": "&copy; 2024 My Municipal Mate. All rights reserved."
+    }
+}
